# big-a-observation

./: .env.example  .gitignore  DEPLOY.md  DEPLOY_GUIDE.md  HUGGINGFACE_DEPLOY.md  HYBRID_MODE_GUIDE.md  README.md  app.py  auto_deploy.py  check_space.py  configure_secrets.py  deploy.sh  frontend_guide.py  health_check.py  model_optimization_guide.py  monitor_cycle.py  new_interface_guide.py  persistent_display_guide.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run.sh  start.sh  upload_files.py
.copilot/: config.yml
frontend/: app.js  index.html  style.css
src/: main.py  streamlit_app.py
src/api/routes/: auth.py  stock_analysis.py
src/models/: database.py  schemas.py
src/services/: auth_service.py  news_monitor.py  realtime_manager.py
